--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,33 @@
 # site settings
 title: MAgPIE
 subtitle: modeling global land systems
+creator: Potsdam Institute for Climate Impact Research (PIK) 
 email: magpie@pik-potsdam.de
 description: A modular open-source framework for modeling global land systems
 baseurl: ""
 url: # the base hostname & protocol for your site
 author:
-street_address: 1234 Somewhere Road
-city: Nashville
-state: TN
-zip_code: 55555
-country: United States of America
-phone: (716) 555-5555
+street_address: Telegrafenberg A 31
+city: Potsdam
+state: Brandenburg
+zip_code: 14473
+country: Germany
+phone:
 
 # homepage tiles
 tiles-source: pages # accepts "posts" or "pages"
 tiles-count: 6
+
+collections:
+  events:
+    output: true
+    permalink: /events/:name
+    title: Events
+  tutorials:
+    output: true
+    permalink: /:collection/:name
+    title: Tutorials
+    sort_by: lesson
 
 # social settings (key must match name of font awesome icon)
 # see Https://Fontawesome.Com/Icons?D=Gallery&P=2&S=Brands
