--- a/_config.yml
+++ b/_config.yml
@@ -34,9 +34,11 @@ collections:
 # Icons are not shown if value is empty
 # You need to restart jekyll for changes to have an effect
 socials:
-  GitHub: https://github.com/magpiemodel
-  User: https://fontawesome.com/icons?d=gallery&p=2&s=brands
-
+  envelope: mailto:magpie@pik-potsdam.de
+  home: https://www.pik-potsdam.de/en/institute/departments/transformation-pathways/research/landuse
+  github: https://github.com/magpiemodel/magpie
+  wikipedia-w: https://en.wikipedia.org/wiki/MAgPIE
+ 
 # build settings
 markdown: kramdown
 
